applications/cnpg/base/resources/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-allow-ingress
  namespace: cnpg-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cloudnative-pg
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: webhook-server
          protocol: TCP
        - port: metrics
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cnpg-allow-egress
  namespace: cnpg-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cloudnative-pg
  policyTypes:
    - Egress
  egress:
    - ports:
        - port: 443
          protocol: TCP
        - port: 6443
          protocol: TCP
        - port: 8000
          protocol: TCP
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
